[project]
name = "rag-poc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "flake8>=7.1.2",
    "langchain>=0.3.20",
    "langchain-google-genai>=2.0.11",
    "numpy>=2.2.3",
    "wikipedia>=1.4.0",
]
